--- a/javascript_e3/index.html
+++ b/javascript_e3/index.html
@@ -12,7 +12,7 @@
             <h1>Elije tu pizza</h1>
             <form id="form">
                 <input type="number" min="1" max="8" placeholder="Ingrese el ID de la pizza" id="input_id" style="font-weight: bold;"/>
-                <button type="submit" id="form_btn">Buscar</button>
+                <button type="submit" id="form_btn" style="cursor: pointer;">Buscar</button>
             </form>
         </section>
         <section class="card">
